inc/scss/_theme.scss
/* ... */
.news {
	
	.align-center {
		margin: auto;
	}
	
	.wrapper-news {
		display: grid;
		grid-template-columns: calc(50% - 1em) calc(50% - 1em);
		column-gap: 2em;
		margin: auto;
        background: hsl(0, 0%, 88%);
        padding: 1em;
        margin-bottom: 2em;
        
        .img a {
            display: block;
            height: 100%;
            width: 100%;    
        }
	}
}

.galleries, .our-guides, .page-news, .history, .bespoke-film {
	
	.gallery {
		margin-bottom: 0em;
		
		a {
			display: inline-block;
			flex-grow: unset !important;
			min-height: 15em;
			margin-right: 5px;
			
			
			&:nth-of-type(9n - 8){
	            flex: calc(25% - 5px);
	        }
	        
	        &:nth-of-type(9n - 7){
	            flex: calc(40% - 5px);
	        }
	        
	        &:nth-of-type(9n - 6){
	            flex: calc(35% - 5px)
	        }
	        
	        &:nth-of-type(9n - 5){
	            flex: calc(40% - 5px)
	        }        
	
	        &:nth-of-type(9n - 4) {
		        flex: calc(35% - 5px)
	        }
	        
	        &:nth-of-type(9n - 3) {
		        flex: calc(25% - 5px)
		    }
		    
	        &:nth-of-type(9n - 2) {
	           flex: calc(30% - 5px)
	        }
	        
	        &:nth-of-type(9n - 1) {
	           flex: calc(30% - 5px)
	        }
	        
	        &:nth-of-type(9n) {
	           flex: calc(40% - 5px)
	        }
	    }
	}
}

.our-guides {
	
	.wrapper-guides {
		
		&:not(:first-of-type) {
			margin-top: 1em;
		}
	
		.guide {
			background: grey;
			color: white;
			text-transform: uppercase;
			padding: 1em 5em;
			position: relative;
			display: flex;
			align-items: center;
			cursor: pointer;
			
			.img {
				@include backgroundCover;
				position: absolute;
				left: 0;
				height: 100%;
				width: 4em;
			}
			
			&.opened i {
				transform: rotate(90deg);
			}
			
			i {
				float: right;
			    position: absolute;
			    right: 1em;
			    transition: $fastEffect;
			}
		}
		
		.info {
			
			.row {
				margin: 0.3em 0 0 0;
				background: $brand-light-grey;
				padding: 1em;
			}
			
			.img {
				@include backgroundCover;
				min-height: 20em;
			}
		}
		
		.gallery {
			width: 100%;
			margin-bottom: 0;
			
			a {
				&:nth-child(n) {
					flex: calc(10% - 5px);	
					min-height: 5em;
				}
			}
		}
	}
	
}

.travel-info, .agent-specials {
	
	p {
		font-size: 1em;
	}

	.pdf-wrapper {
		display: flex;
		align-items: center;
		line-height: unset;
		
		i {
			font-size: 1.5em;
			color: $brand-secondary;
		}
	}
	
	.faq {
		
		.wrapper-questions {
			
			&:not(:first-of-type) {
				margin-top: 1em;
			}
			
			.question {
				background: grey;
				color: white;
				padding: 0.5em 1em;
				position: relative;
				display: flex;
				align-items: center;
				cursor: pointer;
				font-weight: 400;
				text-transform: uppercase;
				letter-spacing: 0.05em;
				
				&.opened {
    				background: $brand-secondary;
				}
				
				&.opened i {
					transform: rotate(90deg);
				}
				
				i {
					float: right;
				    position: absolute;
				    right: 1em;
				    transition: $fastEffect;
				}
			}
			
			.answer {
				padding: 1em;
				margin-top: 0.3em;
				line-height: 1.9em;
				background: $brand-light-grey;
			}
		}
	}
}

.page-news, .bespoke-film, .terms-privacy, .search-page {
	p {
		font-size: 1em;
	}
}

.page-news {
	
	.adjacent-posts {
	
		.col-6 {
			&:first-of-type {
				text-align: left;
			}
			
			&:last-of-type {
				text-align: right;
			}
		}
		
		a {
			display: inline-flex;
			padding: 1em;
			align-items: center;
			justify-content: center;
		
			i {
				align-items: center;
				
				&.fa-chevron-right {
					padding-left: 10px;
				}
				
				&.fa-chevron-left {
					padding-right: 10px;
				}
			}
		}
	}
	
	.main a {
		color: $brand-secondary;
		transition: color 0.3s ease-in-out;
		font-weight: normal;
		
		&:hover {
			color: lighten($brand-secondary, 10%);
		}
	}
}

.search-page {
	
	.align-center {
		margin: auto;
	}
	
	.wrapper-news {
		display: grid;
		grid-template-columns: calc(50% - 1em) calc(50% - 1em);
		column-gap: 2em;
		margin: auto;
	}
}

.pagination {
	justify-content: flex-end;
	
	a, span {
		background: $brand-secondary;
		color: white;
		margin: 0.5em;
		padding: 1em;
		display: inline-block;
		line-height: 1em;
		border-radius: 50%;
		height: 2.5em;
		width: 2.5em;
		display: flex;
		align-items: center;
		justify-content: center;
		font-size: 1em;
		font-weight: 400;
		
		i {
			font-size: 1.5em;
		}
	}
	
	span.current {
		background: white;
		border: 2px solid $brand-secondary;
		color: $brand-secondary;
		font-weight: 700;
	}
}

.wrapper-news {
	
	.img {
		@include backgroundCover;
	}
	
	.description {
		text-align: justify;
	}
	
	.action-buttons {
		font-size: 0.9em;
		display: grid;
		grid-template-columns: calc(45% - 0.5em) calc(55% - 0.5em);
		grid-column-gap: 1em;
		
		div {
			display: flex;
			align-items: center;
			justify-content: center;
		}
		
		.button {
			display: block;
			margin: 0;
			width: 100%;
		}
	}
	
	.content a {
		display: block;
	}
}
/* ... */

